# cognitive-bias-tester

./: .env.example  .gitignore  .gitmodules  LICENSE  README.docker.md  README.md  check_suggested_fix.py  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_domain_model.py
backend/src/: main.py
backend/src/api/: health.py  i18n.py
backend/src/core/: __init__.py  config.py  cyclic_buffer.py  logging.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/db/models/: __init__.py  answer_event.py  bias_type.py  case.py  case_translation.py  rating.py  subscription.py  ui_string.py  ui_string_translation.py  user.py
backend/src/db/repositories/: __init__.py  answer_event.py  base.py  bias_type.py  case.py  case_translation.py  rating.py  subscription.py  ui_string.py  user.py
backend/src/db/seed/: __init__.py  bias_types.json  cases.json  seed.py  ui_strings.json
backend/tests/: conftest.py  test_db.py  test_health.py
backend/tests/api/: __init__.py  test_i18n.py
backend/tests/core/: __init__.py  test_cyclic_buffer.py
backend/tests/db/: test_models.py  test_repositories.py  test_seed.py
data/biases/: README.md
data/biases/supported/: anchoring.cs.md  anchoring.en.md  confirmation_bias.cs.md  confirmation_bias.en.md  framing.cs.md  framing.en.md  loss_aversion.cs.md  loss_aversion.en.md  sunk_cost_fallacy.cs.md  sunk_cost_fallacy.en.md
data/example-eval/: eval_script.py
data/example-eval/eval/: gemini-3.1pro__by__gemini3.1pro.json  gpt-4o__by__gemini3.1pro.json  gpt-5.5__by__sonnet4.6.report.md  opus-4.7__by__gemini3.1pro.report.md  opus-4.7__by__sonnet4.6.json  sonet-4.6__by__gemini3.1pro.json  sonet-4.6__by__gemini3.1pro.report.md
doc/architecture/decisions/: ADR-001-use-postgresql.md  ADR-002-ethics-framework.md  ADR-004-interactive-cases.md  ADR-005-simulation-widget.md
doc/brand/: witwhip.md
doc/project-progress/: GLOSSARY.md  brief.md  roadmap.md  spec.md
doc/project-progress/epic-010-skeleton/: new_planner.md  plan.md  report.md
doc/project-progress/epic-010-skeleton/task-010-project-structure/: dod.md  report.md  spec.md
doc/project-progress/epic-010-skeleton/task-020-docker-compose-db/: dod.md  report.md  spec.md
doc/project-progress/epic-020-data-model/: plan.md
doc/project-progress/epic-030-llm-pipeline/: plan.md
experiments/2026-05-prompt-evaluation/: GENERATION_CONCEPT.md  MANUAL_WORKFLOW.md  README.md  eval.py  requirements.txt
experiments/2026-05-prompt-evaluation/data/: formulation-insights.md
experiments/2026-05-prompt-evaluation/prompts/: task-create-gold-examples.md
experiments/2026-05-prompt-evaluation/src/: eval.py  pipeline.py  requirements.txt
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/i18n/: index.ts
frontend/src/locales/: cs.json  en.json
frontend/src/pages/: HomePage.test.ts  HomePage.vue
frontend/src/router/: index.ts
tests/skeleton/: test_t010.sh  test_t020.sh  test_t030.sh  test_t040.sh  test_t050.sh  test_t060.sh
(+156 files in other folders)
